--- a/codes-calculator/index.html
+++ b/codes-calculator/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ORNO 433mhz RC switch/socket codes calculator</title>
+  <title>ORNO 433MHz RC switch/socket codes calculator</title>
   <script src="calculator.js"></script>
 </head>
 <body>
@@ -33,9 +33,9 @@
   </div>
   
   <div id="result">
-    <p id="codeResult">Code: [Code placeholder]</p>
-    <p id="binaryResult">Binary ON: [Binary placeholder] Binary OFF: [Binary placeholder]</p>
-    <p id="decimalResult">Decimal ON: [Decimal placeholder] Decimal OFF: [Decimal placeholder]</p>
+    <p class="codeResult">[Code placeholder]</p>
+    <p class="binaryResult">[Binary placeholder]</p>
+    <p class="decimalResult">[Decimal placeholder]</p>
   </div>
 </body>
 </html>
