--- a/codes-calculator/index.html
+++ b/codes-calculator/index.html
@@ -16,21 +16,21 @@
     <div class="checkbox-row" id="systemCode" style="display: inline-block; margin-right: 10px;">
       <div>System code<br/><small>Up -> checked</small><br/><small>Down -> unchecked</small></div>
       <!-- Checkboxes for systemCode -->
-      <input type="checkbox" id="s1" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="s2" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="s3" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="s4" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="s5" onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="s1" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="s2" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="s3" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="s4" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="s5" checked onclick="checkboxStateChanged('result')">
     </div>
 
     <div class="checkbox-row" id="unitCode" style="display: inline-block">
       <div>Unit code<br/><small>i.e. button on remote - A->E</small><br/><small>only one unchecked!</small></div>
       <!-- Checkboxes for unitCode -->
       <input type="checkbox" id="u1" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="u2" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="u3" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="u4" onclick="checkboxStateChanged('result')">
-      <input type="checkbox" id="u5" onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="u2" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="u3" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="u4" checked onclick="checkboxStateChanged('result')">
+      <input type="checkbox" id="u5" checked onclick="checkboxStateChanged('result')">
     </div>
   </div>
   
@@ -39,5 +39,6 @@
     <p class="binaryResult">[Binary placeholder]</p>
     <p class="decimalResult">[Decimal placeholder]</p>
   </div>
+  <script>checkboxStateChanged('result');</script>
 </body>
 </html>
