HA rpi_rf example - additional info

--- a/codes-calculator/index.html
+++ b/codes-calculator/index.html
@@ -111,7 +111,8 @@
         <div><a href="https://github.com/markvader/ha-rpi_rf" target="_blank">Home Assistant -> rpi_rf</a> example:</div>
         <div>
           <small>
-            Can be installed using <a href="">https://hacs.xyz/</a>
+            Can be installed using <a href="">https://hacs.xyz/</a><br/>
+            When changing code in HA, its docker restart is required (reload of configuration doesn't work)
           </small>
         </div>
         <div>
