HA rpi_rf example - additional info

--- a/codes-calculator/index.html
+++ b/codes-calculator/index.html
@@ -112,7 +112,7 @@
         <div>
           <small>
             Can be installed using <a href="">https://hacs.xyz/</a><br/>
-            When changing code in HA, its docker restart is required (reload of configuration doesn't work)
+            When changing code value in HA, its docker restart is required (reload of configuration doesn't work)
           </small>
         </div>
         <div>
